[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Icons/save_file_white.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/open_file_white.png" type="Texture" id=2]
[ext_resource path="res://UI/Toolbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/new_file_white.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/clear_canvas_white.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/redo_white.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/undo_white.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/brush_white.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/eraser_white.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/color_picker.png" type="Texture" id=10]
[ext_resource path="res://Assets/Icons/line_tool_white.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/background_tool_white.png" type="Texture" id=12]
[ext_resource path="res://UI/Components/FlatTextureButton.gd" type="Script" id=13]
[ext_resource path="res://Assets/Fonts/font_11.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/Icons/grid_white.png" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.619608, 0.619608, 0.619608, 1 )
grow_begin = -10.0
grow_end = -10.0
vertical = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Toolbar" type="Panel"]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Left"]
margin_right = 4.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )

[node name="NewFileButton" type="TextureButton" parent="Left"]
margin_left = 16.0
margin_top = 11.0
margin_right = 34.0
margin_bottom = 29.0
hint_tooltip = "Create New File (CTRL+N)"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="OpenFileButton" type="TextureButton" parent="Left"]
margin_left = 46.0
margin_top = 11.0
margin_right = 64.0
margin_bottom = 29.0
hint_tooltip = "Open File (CTRL+O)"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="SaveFileButton" type="TextureButton" parent="Left"]
margin_left = 76.0
margin_top = 11.0
margin_right = 94.0
margin_bottom = 29.0
hint_tooltip = "Save File (CTRL+S)"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="ClearCanvasButton" type="TextureButton" parent="Left"]
margin_left = 106.0
margin_top = 11.0
margin_right = 124.0
margin_bottom = 29.0
hint_tooltip = "Clear Canvas"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator2" type="VSeparator" parent="Left"]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="Left"]
margin_left = 152.0
margin_top = 11.0
margin_right = 170.0
margin_bottom = 29.0
hint_tooltip = "Undo Action (CTRL+Z)"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="RedoButton" type="TextureButton" parent="Left"]
margin_left = 182.0
margin_top = 11.0
margin_right = 200.0
margin_bottom = 29.0
hint_tooltip = "Redo Action (CTRL+Y)"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator3" type="VSeparator" parent="Left"]
margin_left = 212.0
margin_right = 216.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushToolButton" type="TextureButton" parent="Left"]
margin_left = 228.0
margin_top = 11.0
margin_right = 246.0
margin_bottom = 29.0
hint_tooltip = "Brush Tool (B)"
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
pressed = true
texture_normal = ExtResource( 8 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="LineToolButton" type="TextureButton" parent="Left"]
margin_left = 258.0
margin_top = 12.0
margin_right = 274.0
margin_bottom = 28.0
hint_tooltip = "Line Tool (L)"
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 11 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="EraserToolButton" type="TextureButton" parent="Left"]
margin_left = 286.0
margin_top = 11.0
margin_right = 304.0
margin_bottom = 29.0
hint_tooltip = "Eraser (E)"
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 9 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="ColorPickerToolButton" type="TextureButton" parent="Left"]
margin_left = 316.0
margin_top = 11.0
margin_right = 334.0
margin_bottom = 29.0
hint_tooltip = "Color Picker"
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 10 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator4" type="VSeparator" parent="Left"]
margin_left = 346.0
margin_right = 350.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="Left"]
margin_left = 362.0
margin_top = 10.0
margin_right = 422.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 20 )
hint_tooltip = "Brush Color"
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "#ffffff"
__meta__ = {
"_edit_group_": true
}

[node name="BrushSizeSlider" type="HSlider" parent="Left"]
margin_left = 434.0
margin_top = 10.0
margin_right = 554.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
hint_tooltip = "Brush Size"
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="BrushSizeLabel" type="Label" parent="Left"]
margin_left = 566.0
margin_top = 13.0
margin_right = 578.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 14 )
text = "12"

[node name="Right" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColorButton" type="TextureButton" parent="Right"]
margin_top = 12.0
margin_right = 16.0
margin_bottom = 28.0
hint_tooltip = "Canvas color"
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
texture_normal = ExtResource( 12 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="GridButton" type="TextureButton" parent="Right"]
margin_left = 28.0
margin_top = 12.0
margin_right = 44.0
margin_bottom = 28.0
hint_tooltip = "Toogle Grid"
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 15 )
script = ExtResource( 13 )
hover_tint = Color( 0.615686, 1, 0.913725, 1 )
pressed_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator" type="VSeparator" parent="Right"]
margin_left = 56.0
margin_right = 60.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )

[connection signal="pressed" from="Left/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="pressed" from="Left/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="Left/SaveFileButton" to="." method="_on_SaveFileButton_pressed"]
[connection signal="pressed" from="Left/ClearCanvasButton" to="." method="_on_ClearCanvasButton_pressed"]
[connection signal="pressed" from="Left/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="Left/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="Left/BrushToolButton" to="." method="_on_BrushToolButton_pressed"]
[connection signal="pressed" from="Left/LineToolButton" to="." method="_on_LineToolButton_pressed"]
[connection signal="pressed" from="Left/EraserToolButton" to="." method="_on_EraserToolButton_pressed"]
[connection signal="pressed" from="Left/ColorPickerToolButton" to="." method="_on_ColorPickerToolButton_pressed"]
[connection signal="pressed" from="Left/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="value_changed" from="Left/BrushSizeSlider" to="." method="_on_BrushSizeSlider_value_changed"]
[connection signal="pressed" from="Right/BackgroundColorButton" to="." method="_on_BackgroundColorButton_pressed"]
[connection signal="pressed" from="Right/GridButton" to="." method="_on_GridButton_pressed"]
